@@ -63,6 +63,7 @@ public:
 		double &conductance, double &Cth);
   virtual void callback(void);
   virtual double get_nodeVoltage() { return voltage; }
+  virtual bool switch_closed() { return m_bCurrentState; }
 
 protected:
   SwitchPin *m_pinA;
